[package]
name = "rustyflutter_build"
version = "1.0.0"
edition = "2021"

[dependencies]
cargo-emit = "0.2.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0"
pathdiff = "0.2.0"
path-slash = "0.1.4"
dunce = "1.0.1"
copy_dir = "0.1.2"
yaml-rust = "0.4"
base64 = "0.13.0"

[target.'cfg(target_os = "macos")'.dependencies]
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
cmake = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
cmake = "0.1"
convert_case = "0.4.0"